--- a/projeto/tsconfig.json
+++ b/projeto/tsconfig.json
@@ -9,12 +9,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2016",
-      "dom"
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es6", "dom"],
+    "mapRoot": "./",
+    "module": "es6"
   }
 }
